@@ -1,5 +1,5 @@
 <!doctype HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.21 2003/09/01 16:00:00 bill_clementson Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.22 2003/09/02 14:13:10 bill_clementson Exp $	 -->
 <html>
 
 <head>
@@ -150,10 +150,10 @@ icompile.bat</pre>
   don't download the cua.el utility.</li>
   <li>OPTIONAL: If you want Emacs to emulate the Windows-style buffer switching 
   (e.g. - C-TAB to move from buffer to buffer), download the
-  <a href="http://gnufans.net/~deego/emacspub/site-lisp-not/cua-emul.el">
+  <a href="http://www.vegetable.demon.co.uk/wence/cua-emul.el">
   cua-emul.el</a> utility from
-  <a href="http://gnufans.net/~deego/emacspub/site-lisp-not/cua-emul.el">
-  http://gnufans.net/~deego/emacspub/site-lisp-not/cua-emul.el</a> and put it 
+  <a href="http://www.vegetable.demon.co.uk/wence/cua-emul.el">
+  http://www.vegetable.demon.co.uk/wence/cua-emul.el</a> and put it 
   into the c:\home\site directory. If you want to use the Emacs defaults for 
   buffer switching, don't download the cua-emul.el utility.</li>
   <li>OPTIONAL: The standard code colorization that is done by Emacs is not to 
